--- a/main.ipynb
+++ b/main.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "# Dependencies\n",
+    "#dependencies\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -35,7 +35,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#make user variables\n",
